crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__import_heading_unsorted_import_heading_unsorted.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> import_heading_unsorted.py:1:1
  |
1 | / import pandas
2 | | import os
3 | | from __future__ import annotations
4 | | import sys
5 | | import requests
6 | | from my_first_party import my_first_party_object
7 | | from . import my_local_folder_object
  | |____________________________________^
  |
help: Organize imports
   - import pandas
1  + # Future imports
2  + from __future__ import annotations
3  + 
4  + # Standard library imports
5  | import os
   - from __future__ import annotations
6  | import sys
7  + 
8  + # Third party imports
9  + import pandas
10 | import requests
11 | from my_first_party import my_first_party_object
12 + 
13 + # Local folder imports
14 | from . import my_local_folder_object
