crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__known_local_folder_closest_separate_local_folder_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> separate_local_folder_imports.py:1:1
  |
1 | / import sys
2 | | import ruff
3 | | import leading_prefix
4 | | import os
5 | | from . import leading_prefix
6 | | from .. import trailing_prefix
7 | | from ruff import check
  | |______________________^
help: Organize imports
  |
1 + import os
2 + import sys
3 + 
4 + import leading_prefix
5 + 
6 + import ruff
7 + from . import leading_prefix
8 + from .. import trailing_prefix
9 + from ruff import check
  |
