crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__lazy_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> lazy_imports.py:1:1
  |
1 | / lazy from math import pi
2 | | from math import pi
3 | | lazy import os
4 | | import os
  | |_________^
help: Organize imports
  |
1 + import os
2 + from math import pi
3 + lazy import os
4 + lazy from math import pi
  |
