crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__line_ending_lf.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> line_ending_lf.py:1:1
  |
1 | from long_module_name import member_one, member_two, member_three, member_four, member_five
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Organize imports
  |
1 + from long_module_name import (
2 +     member_five,
3 +     member_four,
4 +     member_one,
5 +     member_three,
6 +     member_two,
7 + )
  |
